# xale-tls

./: .gitignore  CMakeLists.txt  README.md  autorun.sh
.github/workflows/: cmake-single-platform-linux.yml
example/client/: main.cpp
example/server/: main.cpp
include/: debug.h
include/Cryptography/: AES128.h  Curve25519.h  GCM_AES128.h  GaloisFields.h  HKDF.h  HMAC_SHA256.h  SHA256.h  SHA512.h
src/: debug.cpp
src/Cryptography/: AES128.cpp  Curve25519.cpp  GCM_AES128.cpp  HKDF.cpp  HMAC_SHA256.cpp  SHA256.cpp  SHA512.cpp
tests/: TestsHelper.h  main.cpp
tests/Cryptography/: AES128Tests.h  Curve25519Tests.h  GCM_AES128Tests.h  HKDFTests.h  HMAC_SHA256Tests.h  SHA256Tests.h  SHA512Tests.h
